upaded orangotan pages

--- a/ORANGOTANhome.html
+++ b/ORANGOTANhome.html
@@ -25,14 +25,15 @@
 
                        <div id="navSearchPremium">
                        <div id="menuBar" class="menuBar">
-                            <div id="menu" ><a href="" id="home">Home</a></div>
-                            <div id="menu"><a href="" id="movies">Movies</a></div>
-                            <div id="menu"><a href="" id="animes">Anime</a></div>
-                            <div id="menu"><a href="" id="cartoons">Cartoons</a></div>
-                            <div id="menu"><a href="" id="serie">Series & Tv shows</a></div>
+                            <div id="menu" ><a href="ORANGOTANhome.html" id="home">Home</a></div>
+                            <div id="menu"><a href="ORANGOTANmovies.html" id="movies">Movies</a></div>
+                            <div id="menu"><a href="anime.html" id="animes">Anime</a></div>
+                            <div id="menu"><a href="cartoons.html" id="cartoons">Cartoons</a></div>
+                            <div id="menu"><a href="series.html" id="serie">Series & Tv shows</a></div>
                        </div>
                        
                        <div id="searchProfile" class="searchProfile">
+                        <!---- try to change the seaarch to just an icon the use 'onclick' to expand----->
                        <div class="searchBar"><i class="bi bi-search" id="searchIcon"></i><input id='searchInput' type="text" placeholder="Search..."> </div>
 
                        <div id="profileHolder" class="profileHolder">
@@ -54,6 +55,7 @@
 
             <div id="noticeDiv">
               <div id="noticeBoard">
+                <!--remember to hide when the cancel icon is clicked-->
                 <div id="cancelNotice"><i class="fa-regular fa-rectangle-xmark" id="closeIcon"></i></div>
                 <div id="noticeContainer">
                     <p id="noticeHeader">Notice</p>
@@ -83,6 +85,7 @@
                     <div id="movie"><div id="content"><img id="moviePoster" src="/posters & ads/argylle.jpg" alt="argylle"><div id="description"><div id="title"><p>Argylle</p></div><span id="genreRating"><p>Action, Adventure</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>5.7</p></div></span><div id="plot">Elly Conway, an introverted spy novelist, has almost finished<span id="dots">. . . .</span></div></div></div></div>
                     <div id="movie"><div id="content"><img id="moviePoster" src="/posters & ads/challengers.jpg" alt="challengers"><div id="description"><div id="title"><p>Challengers</p></div><span id="genreRating"><p>Romance, Drama</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>NaN</p></div></span><div id="plot">Tashi, a former tennis prodigy turned coach is married to<span id="dots">. . . .</span></div></div></div></div>
                     <div id="movie"><div id="content"><img id="moviePoster" src="/posters & ads/Godzilla x Kong_ The New Empire (2024).jpg" alt="godzilla_x_kong_the_new_empire"><div id="description"><div id="title"><p>Godzilla X Kong: The New Empire</p></div><span id="genreRating"><p>Adventure, Sci-Fi</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>6.7</p></div></span><div id="plot">A few years after defeating<span id="dots">. . . .</span></div></div></div></div>
+                    <!--make the more button redirect to a page of latest released movies-->
                     <div id="moreMovies"><button id="forCursor"><p>More</p><i class="fa-solid fa-chevron-right" id="moreIcon"></i></button></div>
                 </div>
              </div>
@@ -111,6 +114,7 @@
                    <div id="anime"><div id="content"><img id="animePoster" src="/posters & ads/one-piece.jpg" alt="one piece"><div id="description"><div id="title"><p>One Piece</p></div><span id="genreRating"><p>Action, Adventure</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>9.0</p></div></span><div id="plot">The series focuses on Monkey D. Luffy—a young man made<span id="dots">. . . .</span></div></div></div></div>
                    <div id="anime"><div id="content"><img id="animePoster" src="/posters & ads/my hero academia.png" alt="my hero academia"><div id="description"><div id="title"><p>My Hero Academia</p></div><span id="genreRating"><p>Action, Adventure</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>8.3</p></div></span><div id="plot">Izuku Midoriya is a young man who dreams of becoming<span id="dots">. . . .</span></div></div></div></div>
                    <div id="anime"><div id="content"><img id="animePoster" src="/posters & ads/naruto (2002).jpg" alt="naruto"><div id="description"><div id="title"><p>Naruto</p></div><span id="genreRating"><p>Action, Adventure</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>8.4</p></div></span><div id="plot">A powerful fox known as the Nine-Tails attacks Konoha<span id="dots">. . . .</span></div></div></div></div>
+                    <!--make the more button redirect to a page of latest released anime-->
                    <div id="moreAnime"><button id="forCursor"><p>More</p><i class="fa-solid fa-chevron-right" id="moreIcon"></i></button></div>
                </div>
             </div>
@@ -138,6 +142,7 @@
                    <div id="cartoon"><div id="content"><img id="cartoonPoster" src="/posters & ads/Despicable Me 4 (2024).jpg" alt="despicable me IV"><div id="description"><div id="title"><p>Despicable Me 4</p></div><span id="genreRating"><p>Adventure, Comedy</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>NaN</p></div></span><div id="plot">Gru (Carell), the world's favorite supervillain-turned-Anti<span id="dots">. . . .</span></div></div></div></div>
                    <div id="cartoon"><div id="content"><img id="cartoonPoster" src="/posters & ads/Mooned (2023).jpg" alt="mooned"><div id="description"><div id="title"><p>Mooned</p></div><span id="genreRating"><p>Short, Comedy</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>6.1</p></div></span><div id="plot">The short begins with a recap of the events of the first film<span id="dots">. . . .</span></div></div></div></div>
                    <div id="cartoon"><div id="content"><img id="cartoonPoster" src="/posters & ads/spiderman_across_the_spiderverse.jpg" alt="spide-rman across the spiderverse"><div id="description"><div id="title"><p>Spider-Man Across the Spider-Verse</p></div><span id="genreRating"><p>Action, Adventure</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>8.6</p></div></span><div id="plot">On Earth-65, police captain<span id="dots">. . . .</span></div></div></div></div>
+                   <!--make the more button redirect to a page of latest released cartoons-->
                    <div id="moreCartoon"><button id="forCursor"><p>More</p><i class="fa-solid fa-chevron-right" id="moreIcon"></i></button></div>
                </div>
             </div>
@@ -163,6 +168,7 @@
                    <div id="series"><div id="content"><img id="seriesPoster" src="/posters & ads/Manhunt (2024).jpg" alt="manhunt"><div id="description"><div id="title"><p>Manhunt</p></div><span id="genreRating"><p>Adventure, Comedy</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>NaN</p></div></span><div id="plot">After President Abraham Lincoln's assassination<span id="dots">. . . .</span></div></div></div></div>
                    <div id="series"><div id="content"><img id="seriesPoster" src="/posters & ads/Tokyo Vice (2022).jpg" alt="tokyo vice"><div id="description"><div id="title"><p>Tokyo Vice</p></div><span id="genreRating"><p>Crime, Drama</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>8.0</p></div></span><div id="plot">In 1999, American journalist Jake Adelstein has relocated<span id="dots">. . . .</span></div></div></div></div>
                    <div id="series"><div id="content"><img id="seriesPoster" src="/posters & ads/The Boys (2019).jpg" alt="the boys"><div id="description"><div id="title"><p>The Boys</p></div><span id="genreRating"><p>Action, Drama</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>8.7</p></div></span><div id="plot">The Boys is set in a universe where superpowered<span id="dots">. . . .</span></div></div></div></div>
+                   <!--make the more button redirect to a page of latest released series-->
                    <div id="moreSeries"><button id="forCursor"><p>More</p><i class="fa-solid fa-chevron-right" id="moreIcon"></i></button></div>
                </div>
             </div>
@@ -176,12 +182,14 @@
                     <p id="supportText">Support Us</p>
                     <p id="supportPhrase">If  you enjoy our site please  take the time to donate so we can help serve you better.
                     click the button below to donate. Thanks! </p>
+                    <!--let this redirect to the donation page-->
                     <button id="donateButton">Support</button>
                 </div>
 
                 <div id="contact">
                     <p id="contactText">Contact Us</p>
                     <p id="contactPhrase">Trying to reach us?. Send us an Email at orangotan@gmail.com. Thanks! </p>
+                    <!--let this redirect to compose gmail page on thier mail with our gmail address already placed in recepient input-->
                     <button id="contactButton">Write Us</button>
                 </div>
             </div>
@@ -196,6 +204,7 @@
                     <input id="genreType" type="text" placeholder="Type genre">
                     <label for="dateOfRelease">D.O.R:</label>
                     <input id="dateOfRelease" type="date">
+                    <!--let this recieve filled in data and store in database-->
                     <button id="submitRequest">Request</button>
                    
                 </form>
@@ -208,13 +217,13 @@
 
     <footer>
         <div id="disclaimerPrivacyPolicyTermsCopyRight">
-            <p id="disclaimer"><a href="">Disclaimer</a></p>
+            <p id="disclaimer"><a href="disclaimer.html">Disclaimer</a></p>
             <p id="">-</p>
-            <p id="privacypolicy"><a href="">Privacy Policy</a></p>
+            <p id="privacypolicy"><a href="privacypolicy.html">Privacy Policy</a></p>
             <p id="">-</p>
-            <p id="terms"><a href="">Terms</a></p>
+            <p id="terms"><a href="terms.html">Terms</a></p>
             <p id="">-</p>
-            <p id="copyright"><a href="">©️2024</a>.</p>
+            <p id="copyright"><a href="copyright.html">©️2024</a>.</p>
             <p id="design">Designed for ORANGOTAN.Net</p>
         </div>
     </footer>
