--- a/ORANGOTANmovies.html
+++ b/ORANGOTANmovies.html
@@ -24,12 +24,13 @@
                            <p id="phrase">We deliver clean entertainment!</p>
                        </div>
 
+                       <div id="navSearchPremium">
                        <div id="menuBar" class="menuBar">
-                            <div id="menu"><a href="">Home</a></div>
-                            <div id="menu"><a href="">Movies</a></div>
-                            <div id="menu"><a href="">Anime</a></div>
-                            <div id="menu"><a href="">Cartoons</a></div>
-                            <div id="menu"><a href="">Series & Tv shows</a></div>
+                            <div id="menu"><a href="ORANGOTANhome.html">Home</a></div>
+                            <div id="menu"><a href="ORANGOTANmovies.html">Movies</a></div>
+                            <div id="menu"><a href="anime.html">Anime</a></div>
+                            <div id="menu"><a href="cartoons.html">Cartoons</a></div>
+                            <div id="menu"><a href="series.html">Series & Tv shows</a></div>
                        </div>
                        
                        <div id="searchProfile" class="searchProfile">
@@ -39,7 +40,7 @@
                          <img id="profileImage" class="profileImage" src="profile picture.jpg" alt="">
                          <button id="premiumOption" class="premiumOption"><i class="bi bi-gem" id="premiumIcon"></i>Get Premium</button>
                        </div>
-
+                       </div>
                        </div>
                 </div>
             </nav>
@@ -972,13 +973,13 @@
 
     <footer>
         <div id="disclaimerPrivacyPolicyTermsCopyRight">
-            <p id="disclaimer"><a href="">Disclaimer</a></p>
+            <p id="disclaimer"><a href="disclaimer.html">Disclaimer</a></p>
             <p id="">-</p>
-            <p id="privacypolicy"><a href="">Privacy Policy</a></p>
+            <p id="privacypolicy"><a href="privacypolicy.html">Privacy Policy</a></p>
             <p id="">-</p>
-            <p id="terms"><a href="">Terms</a></p>
+            <p id="terms"><a href="terms.html">Terms</a></p>
             <p id="">-</p>
-            <p id="copyright"><a href="">©️2024</a>.</p>
+            <p id="copyright"><a href="copyright.html">©️2024</a>.</p>
             <p id="design">Designed for ORANGOTAN.Net</p>
         </div>
     </footer>
