--- a/copyright.html
+++ b/copyright.html
@@ -23,12 +23,13 @@
                            <p id="phrase">We deliver clean entertainment!</p>
                        </div>
 
+                       <div id="navSearchPremium">
                        <div id="menuBar" class="menuBar">
-                            <div id="menu"><a href="">Home</a></div>
-                            <div id="menu"><a href="">Movies</a></div>
-                            <div id="menu"><a href="">Anime</a></div>
-                            <div id="menu"><a href="">Cartoons</a></div>
-                            <div id="menu"><a href="">Series & Tv shows</a></div>
+                            <div id="menu"><a href="ORANGOTANhome.html">Home</a></div>
+                            <div id="menu"><a href="ORANGOTANmovies.html">Movies</a></div>
+                            <div id="menu"><a href="anime.html">Anime</a></div>
+                            <div id="menu"><a href="cartoons.html">Cartoons</a></div>
+                            <div id="menu"><a href="series.html">Series & Tv shows</a></div>
                        </div>
                        
                        <div id="searchProfile" class="searchProfile">
@@ -38,7 +39,7 @@
                          <img id="profileImage" class="profileImage" src="profile picture.jpg" alt="">
                          <button id="premiumOption" class="premiumOption"><i class="bi bi-gem" id="premiumIcon"></i>Get Premium</button>
                        </div>
-
+                       </div>
                     </div>
                 </div>
             </nav>
