--- a/anime.html
+++ b/anime.html
@@ -25,6 +25,13 @@
                        </div>
                        
                        <div id="navSearchPremium">
+
+                        <div id="hamburgerMenu" class="hamburgerMenu">
+                            <span id="hamburgerIcon"></span>
+                            <span id="hamburgerIcon"></span>
+                            <span id="hamburgerIcon"></span>
+                        </div>
+                        
                        <div id="menuBar" class="menuBar">
                             <div id="menu"><a href="ORANGOTANhome.html">Home</a></div>
                             <div id="menu"><a href="ORANGOTANmovies.html">Movies</a></div>
