--- a/series.html
+++ b/series.html
@@ -24,6 +24,13 @@
                            <p id="phrase">We deliver clean entertainment!</p>
                        </div>
                        <div id="navSearchPremium">
+
+                        <div id="hamburgerMenu" class="hamburgerMenu">
+                            <span id="hamburgerIcon"></span>
+                            <span id="hamburgerIcon"></span>
+                            <span id="hamburgerIcon"></span>
+                        </div>
+                        
                        <div id="menuBar" class="menuBar">
                             <div id="menu"><a href="ORANGOTANhome.html">Home</a></div>
                             <div id="menu"><a href="ORANGOTANmovies.html">Movies</a></div>
