--- a/cartoons.html
+++ b/cartoons.html
@@ -21,7 +21,7 @@
 
                        <div id="logoPhrase">
                            <h1 id="logo">ORANGOTAN</h1>
-                           <p id="phrase">We deliver clean entertainment!</p>
+                           <p id="phrase"><nobr>We deliver clean entertainment!</nobr></p>
                        </div>
 
                        <div id="navSearchPremium">
@@ -37,7 +37,7 @@
                             <div id="menu"><a href="ORANGOTANmovies.html">Movies</a></div>
                             <div id="menu"><a href="anime.html">Anime</a></div>
                             <div id="menu"><a href="cartoons.html">Cartoons</a></div>
-                            <div id="menu"><a href="series.html">Series & Tv shows</a></div>
+                            <div id="menu"><a href="series.html"><nobr>Series & Tv shows</nobr></a></div>
                        </div>
                        
                        <div id="searchProfile" class="searchProfile">
@@ -960,6 +960,7 @@
                 </div>
             </section>
         </main>
+        <script src="cartoons.js"></script>
     </body>
 
     <footer>
