--- a/ORANGOTANhome.html
+++ b/ORANGOTANhome.html
@@ -20,7 +20,7 @@
 
                        <div id="logoPhrase">
                            <h1 id="logo">ORANGOTAN</h1>
-                           <p id="phrase">We deliver clean entertainment!</p>
+                           <p id="phrase"><nobr>We deliver clean entertainment!</nobr></p>
                        </div>
 
                        <div id="navSearchPremium">
@@ -35,7 +35,7 @@
                             <div id="menu"><a href="ORANGOTANmovies.html" id="movies">Movies</a></div>
                             <div id="menu"><a href="anime.html" id="animes">Anime</a></div>
                             <div id="menu"><a href="cartoons.html" id="cartoons">Cartoons</a></div>
-                            <div id="menu"><a href="series.html" id="serie">Series & Tv shows</a></div>
+                            <div id="menu"><a href="series.html" id="serie"><nobr>Series & Tv shows</nobr></a></div>
                        </div>
                        
                        <div id="searchProfile" class="searchProfile">
