--- a/ORANGOTANhome.html
+++ b/ORANGOTANhome.html
@@ -44,7 +44,7 @@
 
                        <div id="profileHolder" class="profileHolder">
                          <img id="profileImage" class="profileImage" src="profile picture.jpg" alt="">
-                         <button id="premiumOption" class="premiumOption"><i class="bi bi-gem" id="premiumIcon"></i>Get Premium</button>
+                         <button id="premiumOption" class="premiumOption"><i class="bi bi-gem" id="premiumIcon"></i><p>Get Premium</p></button>
                        </div>
                        </div>
                        </div>
@@ -55,7 +55,7 @@
         <main>
             <div id="darkModeSwitch">
                 <p>Light Mode</p>
-                <div id="modeSwitchCase"><button id="modeSwithBall" onclick="modeSwitcher()"></button></div>
+                <div id="modeSwitchCase"><button id="modeSwithBall" ></button></div>
                
             </div>
 
@@ -81,16 +81,226 @@
              <div id="newMovies">
                 <p id="newMovieText">New Movies</p>
                 <div id="newMoviesContainer">
-                    <a><div id="movie"><div id="content"><img id="moviePoster" src="/posters & ads/dune_part_two.jpg" alt="dune_part_II"><div id="description"><div id="title"><p>Dune II</p></div><span id="genreRating"><p>Adventure, Sci-Fi</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>9.4</p></div></span><div id="plot">Following the destruction of House Atreides by House <span id="dots">. . . .</span></div></div></div></div></a>
-                    <a><div id="movie"><div id="content"><img id="moviePoster" src="/posters & ads/fall_guy.jpg" alt="fall_guy"><div id="description"><div id="title"><p>Fall Guy</p></div><span id="genreRating"><p>Action, Comedy</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>NaN</p></div></span><div id="plot">Colt Seavers, a battered and past-his-prime action<span id="dots">. . . .</span></div></div></div></div></a>
-                    <a><div id="movie"><div id="content"><img id="moviePoster" src="/posters & ads/snack_shack.jpg" alt="snack_shack"><div id="description"><div id="title"><p>Snack Shack</p></div><span id="genreRating"><p>Comedy</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>7.7</p></div></span><div id="plot">Two teenage friends, A.J. Carter and Moose Miller, pursue<span id="dots">. . . .</span></div></div></div></div></a>
-                    <a><div id="movie"><div id="content"><img id="moviePoster" src="/posters & ads/cabrini.jpg" alt="cabrini"><div id="description"><div id="title"><p>Cabrini</p></div><span id="genreRating"><p>Biographical, Drama</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>7.9</p></div></span><div id="plot">In 1889 New York City, an Italian immigrant boy, Paolo<span id="dots">. . . .</span></div></div></div></div></a>
-                    <a><div id="movie"><div id="content"><img id="moviePoster" src="/posters & ads/american_society_of_magical_negroes.jpg" alt="american_society_of_magical_negroes"><div id="description"><div id="title"><p>American Society of Magical Negroes</p></div><span id="genreRating"><p>Family, Comedy</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>2.4</p></div></span><div id="plot">A young biracial African-<span id="dots">. . . .</span></div></div></div></div></a>
-                    <a><div id="movie"><div id="content"><img id="moviePoster" src="/posters & ads/damsel.jpg" alt="damsel"><div id="description"><div id="title"><p>Damsel</p></div><span id="genreRating"><p>Adventure,Fantasy</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>6.1</p></div></span><div id="plot">The first king of Aurea leads a futile attack on a dragon<span id="dots">. . . .</span></div></div></div></div></a>
-                    <a><div id="movie"><div id="content"><img id="moviePoster" src="/posters & ads/madame_web.jpg" alt="madame_web"><div id="description"><div id="title"><p>Madame Web</p></div><span id="genreRating"><p>Mystery, Thriller</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>3.8</p></div></span><div id="plot">In 1973 in the jungles of Peru, a research team led by<span id="dots">. . . .</span></div></div></div></div></a>
-                    <a><div id="movie"><div id="content"><img id="moviePoster" src="/posters & ads/argylle.jpg" alt="argylle"><div id="description"><div id="title"><p>Argylle</p></div><span id="genreRating"><p>Action, Adventure</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>5.7</p></div></span><div id="plot">Elly Conway, an introverted spy novelist, has almost finished<span id="dots">. . . .</span></div></div></div></div></a>
-                    <a><div id="movie"><div id="content"><img id="moviePoster" src="/posters & ads/challengers.jpg" alt="challengers"><div id="description"><div id="title"><p>Challengers</p></div><span id="genreRating"><p>Romance, Drama</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>NaN</p></div></span><div id="plot">Tashi, a former tennis prodigy turned coach is married to<span id="dots">. . . .</span></div></div></div></div></a>
-                    <a><div id="movie"><div id="content"><img id="moviePoster" src="/posters & ads/Godzilla x Kong_ The New Empire (2024).jpg" alt="godzilla_x_kong_the_new_empire"><div id="description"><div id="title"><p>Godzilla X Kong: The New Empire</p></div><span id="genreRating"><p>Adventure, Sci-Fi</p><div id="rating"><i class="fa-brands fa-imdb" id="imdbicon"></i><i class="fa-solid fa-star" id="rateIcon"></i><p>6.7</p></div></span><div id="plot">A few years after defeating<span id="dots">. . . .</span></div></div></div></div></a>
+                    <a>
+                        <div id="movie">
+                            <div id="content">
+                                <img id="moviePoster" src="/posters & ads/dune_part_two.jpg" alt="dune_part_II">
+                                <div id="description">
+                                    <div id="title">
+                                        <p>Dune II</p>
+                                    </div>
+                                    <span id="genreRating">
+                                        <p>Adventure, Sci-Fi</p>
+                                        <div id="rating">
+                                            <i class="fa-brands fa-imdb" id="imdbicon"></i>
+                                            <i class="fa-solid fa-star" id="rateIcon"></i>
+                                            <p>9.4</p>
+                                        </div>
+                                    </span>
+                                    <div id="plot">Following the destruction of House Atreides by House <span id="dots">. . . .</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a>
+                        <div id="movie">
+                            <div id="content">
+                                <img id="moviePoster" src="/posters & ads/fall_guy.jpg" alt="fall_guy">
+                                <div id="description">
+                                    <div id="title">
+                                        <p>Fall Guy</p>
+                                    </div>
+                                    <span id="genreRating">
+                                        <p>Action, Comedy</p>
+                                        <div id="rating">
+                                            <i class="fa-brands fa-imdb" id="imdbicon"></i>
+                                            <i class="fa-solid fa-star" id="rateIcon"></i>
+                                            <p>NaN</p>
+                                        </div>
+                                    </span>
+                                    <div id="plot">Colt Seavers, a battered and past-his-prime action<span id="dots">. . . .</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a>
+                        <div id="movie">
+                            <div id="content">
+                                <img id="moviePoster" src="/posters & ads/snack_shack.jpg" alt="snack_shack">
+                                <div id="description">
+                                    <div id="title">
+                                        <p>Snack Shack</p>
+                                    </div>
+                                    <span id="genreRating">
+                                        <p>Comedy</p>
+                                        <div id="rating">
+                                            <i class="fa-brands fa-imdb" id="imdbicon"></i>
+                                            <i class="fa-solid fa-star" id="rateIcon"></i>
+                                            <p>7.7</p>
+                                        </div>
+                                    </span>
+                                    <div id="plot">Two teenage friends, A.J. Carter and Moose Miller, pursue<span id="dots">. . . .</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a>
+                        <div id="movie">
+                            <div id="content">
+                                <img id="moviePoster" src="/posters & ads/cabrini.jpg" alt="cabrini">
+                                <div id="description">
+                                    <div id="title">
+                                        <p>Cabrini</p>
+                                    </div>
+                                    <span id="genreRating">
+                                        <p>Biographical, Drama</p>
+                                        <div id="rating">
+                                            <i class="fa-brands fa-imdb" id="imdbicon"></i>
+                                            <i class="fa-solid fa-star" id="rateIcon"></i>
+                                            <p>7.9</p>
+                                        </div>
+                                    </span>
+                                    <div id="plot">In 1889 New York City, an Italian immigrant boy, Paolo<span id="dots">. . . .</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a>
+                        <div id="movie">
+                            <div id="content">
+                                <img id="moviePoster" src="/posters & ads/american_society_of_magical_negroes.jpg" alt="american_society_of_magical_negroes">
+                                <div id="description">
+                                    <div id="title">
+                                        <p>American Society of Magical Negroes</p>
+                                    </div>
+                                    <span id="genreRating">
+                                        <p>Family, Comedy</p>
+                                        <div id="rating">
+                                            <i class="fa-brands fa-imdb" id="imdbicon"></i>
+                                            <i class="fa-solid fa-star" id="rateIcon"></i>
+                                            <p>2.4</p>
+                                        </div>
+                                    </span>
+                                    <div id="plot">A young biracial African-<span id="dots">. . . .</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a>
+                        <div id="movie">
+                            <div id="content">
+                                <img id="moviePoster" src="/posters & ads/damsel.jpg" alt="damsel">
+                                <div id="description">
+                                    <div id="title">
+                                        <p>Damsel</p>
+                                    </div>
+                                    <span id="genreRating">
+                                        <p>Adventure,Fantasy</p>
+                                        <div id="rating">
+                                            <i class="fa-brands fa-imdb" id="imdbicon"></i>
+                                            <i class="fa-solid fa-star" id="rateIcon"></i>
+                                            <p>6.1</p>
+                                        </div>
+                                    </span>
+                                    <div id="plot">The first king of Aurea leads a futile attack on a dragon<span id="dots">. . . .</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a>
+                        <div id="movie">
+                            <div id="content">
+                                <img id="moviePoster" src="/posters & ads/madame_web.jpg" alt="madame_web">
+                                <div id="description">
+                                    <div id="title">
+                                        <p>Madame Web</p>
+                                    </div>
+                                    <span id="genreRating">
+                                        <p>Mystery, Thriller</p>
+                                        <div id="rating">
+                                            <i class="fa-brands fa-imdb" id="imdbicon"></i>
+                                            <i class="fa-solid fa-star" id="rateIcon"></i>
+                                            <p>3.8</p>
+                                        </div>
+                                    </span>
+                                    <div id="plot">In 1973 in the jungles of Peru, a research team led by<span id="dots">. . . .</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a>
+                        <div id="movie">
+                            <div id="content">
+                                <img id="moviePoster" src="/posters & ads/argylle.jpg" alt="argylle">
+                                <div id="description">
+                                    <div id="title">
+                                        <p>Argylle</p>
+                                    </div>
+                                    <span id="genreRating">
+                                        <p>Action, Adventure</p>
+                                        <div id="rating">
+                                            <i class="fa-brands fa-imdb" id="imdbicon"></i>
+                                            <i class="fa-solid fa-star" id="rateIcon"></i>
+                                            <p>5.7</p>
+                                        </div>
+                                    </span>
+                                    <div id="plot">Elly Conway, an introverted spy novelist, has almost finished<span id="dots">. . . .</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a>
+                        <div id="movie">
+                            <div id="content">
+                                <img id="moviePoster" src="/posters & ads/challengers.jpg" alt="challengers">
+                                <div id="description">
+                                    <div id="title">
+                                        <p>Challengers</p>
+                                    </div>
+                                    <span id="genreRating">
+                                        <p>Romance, Drama</p>
+                                        <div id="rating">
+                                            <i class="fa-brands fa-imdb" id="imdbicon"></i>
+                                            <i class="fa-solid fa-star" id="rateIcon"></i>
+                                            <p>NaN</p>
+                                        </div>
+                                    </span>
+                                    <div id="plot">Tashi, a former tennis prodigy turned coach is married to<span id="dots">. . . .</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a>
+                        <div id="movie">
+                            <div id="content">
+                                <img id="moviePoster" src="/posters & ads/Godzilla x Kong_ The New Empire (2024).jpg" alt="godzilla_x_kong_the_new_empire">
+                                <div id="description">
+                                    <div id="title">
+                                        <p>Godzilla X Kong: The New Empire</p>
+                                    </div>
+                                    <span id="genreRating">
+                                        <p>Adventure, Sci-Fi</p>
+                                        <div id="rating">
+                                            <i class="fa-brands fa-imdb" id="imdbicon"></i>
+                                            <i class="fa-solid fa-star" id="rateIcon"></i>
+                                            <p>6.7</p>
+                                        </div>
+                                    </span>
+                                    <div id="plot">A few years after defeating<span id="dots">. . . .</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
                     <!--make the more button redirect to a page of latest released movies-->
                     <div id="moreMovies"><button id="forCursor"><p>More</p><i class="fa-solid fa-chevron-right" id="moreIcon"></i></button></div>
                 </div>
