--- a/ORANGOTANhome.html
+++ b/ORANGOTANhome.html
@@ -43,8 +43,11 @@
                        <div class="searchBar"><i class="bi bi-search" id="searchIcon"></i><input id='searchInput' type="text" placeholder="Search..."> </div>
 
                        <div id="profileHolder" class="profileHolder">
-                         <img id="profileImage" class="profileImage" src="profile picture.jpg" alt="">
-                         <button id="premiumOption" class="premiumOption"><i class="bi bi-gem" id="premiumIcon"></i><p>Get Premium</p></button>
+                        <img id="profileImage" class="profileImage" src="profile picture.jpg" alt="">
+                        <button id="premiumOption" class="premiumOption">
+                            <i class="bi bi-gem" id="premiumIcon"></i>
+                            <p>Get Premium</p>
+                        </button>
                        </div>
                        </div>
                        </div>
@@ -54,8 +57,8 @@
 
         <main>
             <div id="darkModeSwitch">
-                <p>Light Mode</p>
-                <div id="modeSwitchCase"><button id="modeSwithBall" ></button></div>
+                <p>Switch Mode</p>
+                <div id="modeSwitchCase"><button type="button" id="modeSwitchBall"></button></div>
                
             </div>
 
@@ -427,8 +430,8 @@
             </div>
             </div>
           </section>
-         <script src="ORANGOTAN.js"></script>
         </main>
+        <script src="ORANGOTAN.js" defer></script>
     </body>
 
     <footer>
