--- a/anime.html
+++ b/anime.html
@@ -13,8 +13,7 @@
         <title>ORANGOTAN/animes</title>
     </head>
 
-    <body>
-
+    <body id="body">
         <header>
             <nav>
                 <div id="navCont" class="navCont">
@@ -25,7 +24,6 @@
                        </div>
                        
                        <div id="navSearchPremium">
-
                         <div id="hamburgerMenu" class="hamburgerMenu">
                             <span id="hamburgerIcon"></span>
                             <span id="hamburgerIcon"></span>
@@ -45,7 +43,7 @@
 
                        <div id="profileHolder" class="profileHolder">
                          <img id="profileImage" class="profileImage" src="profile picture.jpg" alt="">
-                         <button id="premiumOption" class="premiumOption"><i class="bi bi-gem" id="premiumIcon"></i>Get Premium</button>
+                         <button id="premiumOption" class="premiumOption"><i class="bi bi-gem" id="premiumIcon"></i><p>Get Premium</p></button>
                        </div>
                        </div>
                        </div>
@@ -56,7 +54,7 @@
         <main>
             <div id="darkModeSwitch">
                 <p>Light Mode</p>
-                <div id="modeSwitchCase"><button id="modeSwithBall"></button></div>
+                <div id="modeSwitchCase"><button id="modeSwitchBall"></button></div>
                
             </div>
 
